[gd_scene load_steps=6 format=3 uid="uid://v4i4scxrhqws"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ds4vxb4wo3xcx" path="res://Doghound Logo.svg" id="2"]
[ext_resource type="FontFile" uid="uid://cma8cwdroigo7" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3"]
[ext_resource type="FontFile" uid="uid://duq6jf3boy378" path="res://assets/fonts/PixelOperator8.ttf" id="4"]
[ext_resource type="Theme" path="res://main_theme.tres" id="5"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.313726, 0.752941, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="Main" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_constants/separation = 250

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Main/VBoxContainer"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="MarginContainer/Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2")

[node name="Leandro" type="Label" parent="MarginContainer/Main/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 48
text = "Leandro"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartGameButton" type="Button" parent="MarginContainer/Main/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 48
text = "Start Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/Main/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/Main/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="Options" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Options"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
text = "Options"
horizontal_alignment = 1

[node name="WindowMode" type="HBoxContainer" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/Options/VBoxContainer/WindowMode"]
layout_mode = 2
theme = ExtResource("5")
text = "Window Mode"

[node name="WindowModeButton" type="OptionButton" parent="MarginContainer/Options/VBoxContainer/WindowMode"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5")
selected = 0
item_count = 2
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="MasterVolume" type="HSplitContainer" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
split_offset = 295
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/Options/VBoxContainer/MasterVolume"]
layout_mode = 2
theme = ExtResource("5")
text = "Master"

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/Options/VBoxContainer/MasterVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("5")
max_value = 1.0
step = 0.05

[node name="SFXVolume" type="HSplitContainer" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
split_offset = 295
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/Options/VBoxContainer/SFXVolume"]
layout_mode = 2
theme = ExtResource("5")
text = "SFX"

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/Options/VBoxContainer/SFXVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("5")
max_value = 1.0
step = 0.05

[node name="MusicVolume" type="HSplitContainer" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
split_offset = 295
dragger_visibility = 2

[node name="Label" type="Label" parent="MarginContainer/Options/VBoxContainer/MusicVolume"]
layout_mode = 2
theme = ExtResource("5")
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/Options/VBoxContainer/MusicVolume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("5")
max_value = 1.0
step = 0.05

[node name="BackButton" type="Button" parent="MarginContainer/Options/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5")
text = "Back"

[connection signal="pressed" from="MarginContainer/Main/VBoxContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/Main/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/Main/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="item_selected" from="MarginContainer/Options/VBoxContainer/WindowMode/WindowModeButton" to="." method="_on_window_mode_button_item_selected"]
[connection signal="value_changed" from="MarginContainer/Options/VBoxContainer/MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Options/VBoxContainer/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Options/VBoxContainer/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/Options/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
